# SymbFuzz

./: CMakeLists.txt  README.md  pyproject.toml  symfuzz_run.py
backups/: DOCUMENTATION_pre_restructure.md
backups/src_pre_phase3/: main.cpp
backups/src_pre_phase3/bmc/: bmc_engine.cpp  smt2_builder.cpp
backups/src_pre_phase3/frontend/: smt2_parser.cpp
backups/src_pre_phase3/utils/: bitvec_utils.cpp
docs/: ARCHITECTURE.md  TECHNICAL.md  USER_MANUAL.md
examples/: counter.v  lock_fsm.v  uart_tx.v  uart_tx_fast.v
include/bmc/: bmc_engine.h  result_parser.h  smt2_builder.h  target_spec.h
include/frontend/: smt2_parser.h  yosys_driver.h
include/solver/: z3_solver.h
include/utils/: bitvec_utils.h
src/: main.cpp
src/bmc/: bmc_engine.cpp  result_parser.cpp  smt2_builder.cpp
src/frontend/: yosys_driver.cpp
src/solver/: z3_solver.cpp
symfuzz/: __init__.py  bmc_interface.py  cli.py  corpus_store.py  coverage_db.py  design_parser.py  mutations.py  orchestrator.py  sim_driver.py  state_forcing.py  testbench_gen.py  value_classes.py
symfuzz/drivers/: __init__.py  base.py  verilator.py  xsim.py
symfuzz/templates/: compile.sh.j2  tcl_bridge.tcl.j2  uvm_agent.sv.j2  uvm_bmc_seq.sv.j2  uvm_driver.sv.j2  uvm_env.sv.j2  uvm_if.sv.j2  uvm_monitor.sv.j2  uvm_rand_seq.sv.j2  uvm_seq_item.sv.j2  uvm_tb_top.sv.j2  uvm_test.sv.j2  verilator_compile.sh.j2  verilator_harness.cpp.j2
