[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symfuzz"
version = "0.1.0"
description = "Coverage-directed test generation for Verilog/SV using BMC-guided exploration"
requires-python = ">=3.10"
dependencies = ["jinja2"]

[project.scripts]
# After `pip install -e .` this creates a `symfuzz` command on PATH
symfuzz = "symfuzz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["symfuzz*"]

[tool.setuptools.package-data]
symfuzz = ["templates/*.j2"]
